31: [Medias] - manage videos from youtube

--- a/src/Aml/Bundle/AdminBundle/Resources/views/Navigation/primary_sidebar.html.twig
+++ b/src/Aml/Bundle/AdminBundle/Resources/views/Navigation/primary_sidebar.html.twig
@@ -29,7 +29,7 @@
             <ul id="zwz2Ux5SfP" class="collapse ">
 
                 <li class="">
-                    <a href="{{ path('admin_bundle_web_page_list') }}"><i class="icon-hand-up"></i> Pages</a>
+                    <a href="{{ path('admin_aml_web_page_list') }}"><i class="icon-hand-up"></i> Pages</a>
                 </li>
 
                 <li class="dark-nav">
@@ -38,9 +38,9 @@
                         <i class="icon-beaker"></i>Blog
                     </a>
                     <ul id="admin_content_blog" class="collapse ">
-                        <li><a href="{{ path('admin_bundle_blog_article_list') }}">Articles</a></li>
-                        <li><a href="{{ path('admin_bundle_blog_category_list') }}">Catégories</a></li>
-                        <li><a href="{{ path('admin_bundle_blog_tags_list') }}">Mot-clés</a></li>
+                        <li><a href="{{ path('admin_aml_blog_article_list') }}">Articles</a></li>
+                        <li><a href="{{ path('admin_aml_blog_category_list') }}">Catégories</a></li>
+                        <li><a href="{{ path('admin_aml_blog_tags_list') }}">Mot-clés</a></li>
                     </ul>
                 </li>
 
@@ -62,7 +62,7 @@
         </li>
         <li class="">
             <span class="glow"></span>
-            <a href="{{ path('admin_bundle_evenements_evenement_list') }}" title="Gestion des évènements"> <i
+            <a href="{{ path('admin_aml_evenements_evenement_list') }}" title="Gestion des évènements"> <i
                         class="icon-edit icon-2x"></i> <span>Evènements</span></a>
         </li>
 
@@ -76,10 +76,10 @@
             <ul id="submedias" class="collapse">
 
                 <li class="">
-                    <a href="{{ path('admin_bundle_medias_image_list') }}"><i class="icon-hand-up"></i> Images</a>
+                    <a href="{{ path('admin_aml_medias_image_list') }}"><i class="icon-hand-up"></i> Images</a>
                 </li>
                 <li class="">
-                    <a href="{{ path('admin_bundle_medias_file_list') }}"><i class="icon-hand-up"></i> Documents</a>
+                    <a href="{{ path('admin_aml_medias_file_list') }}"><i class="icon-hand-up"></i> Documents</a>
                 </li>
 
             </ul>
