--- a/src/Aml/Bundle/AdminBundle/Resources/views/Navigation/navbar.html.twig
+++ b/src/Aml/Bundle/AdminBundle/Resources/views/Navigation/navbar.html.twig
@@ -77,10 +77,10 @@
 
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                           <span>
-                            <img class="menu-avatar" src="../../images/avatars/avatar1.jpg"/>
+                            <!-- <img class="menu-avatar" src="../../images/avatars/avatar1.jpg"/> -->
 
                             <span>{{ userName }} <i class="icon-caret-down"></i></span>
-                            <span class="badge badge-dark-red">5</span>
+                            <!-- <span class="badge badge-dark-red">5</span> -->
                           </span>
                         </a>
 
@@ -109,7 +109,7 @@
                     <li class="active"><a href="{{ path('home') }}" title="Go home"><i class="icon-home"></i> Home</a>
                     </li>
                     <li{% if app.request.attributes.get('_route') == 'admin_bundle_users_user_list' %} class="active"{% endif %}>
-                        <a href="{# path('admin_bundle_users_user_list') #}" title="Gestion des membres"><i class="icon-user"></i> Membres</a>
+                        <a href="{{ path('admin_aml_users_user_list') }}" title="Gestion des membres"><i class="icon-user"></i> Membres</a>
                     </li>
 
                 </ul>
