--- a/src/Aml/Bundle/WebBundle/Resources/views/Partial/footer.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Partial/footer.html.twig
@@ -6,7 +6,7 @@
 	</ul>
 	
 	<ul id="footer-links">
-		<li><a href="#">Nous contacter</a></li>
+		<li><a href="{{ path('aml_contact_us_index') }}">Nous contacter</a></li>
 		<li> - <a href="#">Partager ce site à un ami</a></li>
 	</ul>
 	
