--- a/src/Aml/Bundle/WebBundle/Resources/views/layout.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/layout.html.twig
@@ -15,7 +15,9 @@
     	<link href="{{ asset('bundles/amlweb/css/main.css') }}" rel="stylesheet">
     	<link href="{{ asset('bundles/amlweb/css/form.css') }}" rel="stylesheet">
     	<link href="{{ asset('bundles/amlweb/css/texte.css') }}" rel="stylesheet">
-    	
+
+        <script src="{{ asset('bundles/amlweb/js/jquery.js') }}" type="text/javascript"></script>
+
     	{% block stylesheets %}{% endblock %}
     	
     	{% block headerJs %}{% endblock %}
@@ -26,7 +28,24 @@
   			{% include "AmlWebBundle::Partial/header.html.twig" %} 
 		
 			<div id="contenu">
-	   		{% block body %}{% endblock %}
+                <!-- CONTENT HERE -->
+                {% for flashMessage in app.session.flashbag.get('success') %}
+                    <div class="alert alert-success flash-notice">
+                        {{ flashMessage }}
+                    </div>
+                {% endfor %}
+                {% for flashMessage in app.session.flashbag.get('notice') %}
+                    <div class="alert alert-error flash-notice">
+                        {{ flashMessage }}
+                    </div>
+                {% endfor %}
+                {% for flashMessage in app.session.flashbag.get('info') %}
+                    <div class="alert alert-info flash-notice">
+                        {{ flashMessage }}
+                    </div>
+                {% endfor %}
+
+                {% block body %}{% endblock %}
 	   		</div>
 	   		<div class="clearfooter"></div>
 	   		
