#37: [DiscographyBundle] - Manage album tracks

--- a/src/Aml/Bundle/AdminBundle/Resources/views/Navigation/primary_sidebar.html.twig
+++ b/src/Aml/Bundle/AdminBundle/Resources/views/Navigation/primary_sidebar.html.twig
@@ -45,7 +45,7 @@
                 </li>
 
                 <li class="">
-                    <a href="{{ path('content_album') }}"> <i class="icon-info-sign"></i> Discrographie</a>
+                    <a href="{{ path('admin_aml_discography_album_list') }}"> <i class="icon-info-sign"></i> Discrographie</a>
                 </li>
 
                 <li class="">
