--- a/src/Aml/Bundle/WebBundle/Resources/public/css/texte.css
+++ b/src/Aml/Bundle/WebBundle/Resources/public/css/texte.css
@@ -1,4 +1,11 @@
 /* ---------- TITRES ---------- */
+h1, h2 {
+    line-height: 28px;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 5px 0;
+}
 /* home */
 #home h1{ font-size: 0px; }
 
@@ -32,7 +39,7 @@ h2, h2 a, h2 a:visited {
 }
 h2 a:hover{ color: #B2B2B2; }
 
-h3{ font-size:16px } 
+h3{ font-size:16px; line-height: 23px; }
 h4{ margin:0; padding:0; }
 /* ---------- FIN - TITRES ---------- */
 
