--- a/src/Aml/Bundle/WebBundle/Resources/views/Default/album.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Default/album.html.twig
@@ -11,10 +11,9 @@
 		</h3>
 		<span class="disc-date-sortie">Date de sortie : {{ lastAlbum.date|date('d-m-Y') }}</span>	
 		
-		<p>{{ lastAlbum.description|raw }}</p>				
+		<p>{{ lastAlbum.description|raw|wordWarp }}</p>
 		
-		<a href="{{ path('aml_discography_album', { 'id': lastAlbum.id }) }}" title="Voir l'album : {{ lastAlbum.title }}" >lire la suite</a>
-		
+		<a href="{{ path('aml_discography_album', { 'id': lastAlbum.id }) }}" title="Voir l'album : {{ lastAlbum.title }}" >Lire la suite</a>
 			
 	</div>	
 </div>
