--- a/src/Aml/Bundle/WebBundle/Resources/views/Default/article.html.twig
+++ b/src/Aml/Bundle/WebBundle/Resources/views/Default/article.html.twig
@@ -22,13 +22,18 @@
     {% endif %}
 
 	<p class="container-wysiwyg">
-		{{lastBlogArticle.body|raw}}
+		{{lastBlogArticle.body|wordWarp}}
+        <a href="{{ path('blog_show', { 'id': lastBlogArticle.id }) }}" title="Lire l'article : {{ lastBlogArticle.title }}" >Lire la suite</a>
 	</p>
 
-	<span class="blog-tags">Mots clés : </span>
-	{% for key,tag in lastBlogArticle.tags %}
-		{% if key > 0 %}, {% endif %}<a class="active" title="{{ tag.description }}" href="{{ path('blog',{'tag' : tag.systemName}) }}">{{ tag.name }}</a>
-	{% endfor %}
+    {% if lastBlogArticle.tags is not empty %}
+        <span class="blog-tags">Mots clés : </span>
+        {% for key,tag in lastBlogArticle.tags %}
+            {% if key > 0 %}, {% endif %}<a class="active" title="{{ tag.description }}" href="{{ path('blog',{'tag' : tag.systemName}) }}">{{ tag.name }}</a>
+        {% endfor %}
+    {% endif %}
+
+
 
 </div>
 {% endif %}
