--- a/src/Aml/Bundle/DiscographyBundle/Resources/views/Default/index.html.twig
+++ b/src/Aml/Bundle/DiscographyBundle/Resources/views/Default/index.html.twig
@@ -8,7 +8,6 @@
 <div id="col-left" class="two-cols-content">
 
 	<div class="contenu-page">
-	
 		
 		{% if entities is not empty %}
 			{% for entity in entities %}
@@ -25,13 +24,12 @@
 					</h3>
 					<span class="disc-date-sortie">Date de sortie : {{ entity.date|date('d-m-Y') }}</span>	
 					
-					<p>{{ entity.description|raw }}</p>				
+					<p>{{ entity.description|raw|wordWarp }}</p>
 					
 					<a href="{{ path('aml_discography_album', { 'id': entity.id }) }}" title="Voir l'album : {{ entity.title }}" >lire la suite</a>
-					
 						
 				</div>	
-			</div>		
+			</div>
 			        
 			{% endfor %} 	
 		
