n/a: [Agenda] - fix display on front

--- a/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/blocArticles.html.twig
+++ b/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/blocArticles.html.twig
@@ -1,5 +1,5 @@
 {# Bloc des articles liés #}
-{% if entity.articles %}
+{% if entity.articles is not empty %}
 <h3>Articles liés</h3>
 <ul id="blocs-evenement-articles">
     {% for key,article in entity.articles %}
