--- a/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/blocPartenaires.html.twig
+++ b/src/Aml/Bundle/EvenementsBundle/Resources/views/Agenda/blocPartenaires.html.twig
@@ -1,4 +1,5 @@
 {# Bloc des partenaires #}
+{% if entity.partenaires is not empty %}
 <h3>Partenaires</h3>
 <ul id="blocs-evenement-partenaires">
     {% for key,partenaire  in entity.partenaires %}
@@ -14,3 +15,4 @@
         </li>
     {% endfor %}
 </ul>
+{% endif %}
