--- a/src/Aml/Bundle/AdminBundle/Resources/views/standard_layout.html.twig
+++ b/src/Aml/Bundle/AdminBundle/Resources/views/standard_layout.html.twig
@@ -25,27 +25,30 @@ file that was distributed with this source code.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         {% block stylesheets %}
-            <!-- jQuery code -->
-            <link rel="stylesheet" href="{{ asset('bundles/sonatajquery/themes/flick/jquery-ui-1.8.16.custom.css') }}" type="text/css" media="all" />
+            {% for stylesheet in admin_pool.getOption('stylesheets', []) %}
+                <link rel="stylesheet" type="text/css"  href="{{ asset(stylesheet) }}"  />
+            {% endfor %}
 
-            <!-- base application asset -->
-            <link rel="stylesheet" href="{{ asset('bundles/sonataadmin/css/layout.css') }}" type="text/css" media="all" />
-            <link rel="stylesheet" href="{{ asset('bundles/sonataadmin/css/colors.css') }}" type="text/css" media="all" />
-
-
-            <link href="{{ asset('bundles/amladmin/stylesheets/application.css') }}" media="screen" rel="stylesheet" type="text/css" />
-           <!-- <link href="{{ asset('bundles/amlweb/css/admin/application.css') }}" media="screen" rel="stylesheet" type="text/css"/> -->
+            <link rel="stylesheet" type="text/css" href="{{ asset('bundles/amladmin/stylesheets/application.css') }}"/>
         {% endblock %}
 
         {% block javascripts %}
-            <script src="{{ asset('bundles/sonatajquery/jquery-1.8.3.js') }}" type="text/javascript"></script>
-            <script src="{{ asset('bundles/sonatajquery/jquery-ui-1.8.23.js') }}" type="text/javascript"></script>
-            <script src="{{ asset('bundles/sonatajquery/jquery-ui-i18n.js') }}" type="text/javascript"></script>
+            <script>
+                window.SONATA_CONFIG = {
+                    CONFIRM_EXIT: {% if admin_pool is defined and admin_pool.getOption('confirm_exit') %}true{% else %}false{% endif %},
+                    USE_SELECT2: {% if admin_pool is defined and admin_pool.getOption('use_select2') %}true{% else %}false{% endif %}
+                };
+                window.SONATA_TRANSLATIONS = {
+                    CONFIRM_EXIT:  '{{ 'confirm_exit'|trans({}, 'SonataAdminBundle')|escape('js') }}'
+                };
+            </script>
 
-            <script src="{{ asset('bundles/sonataadmin/jquery/jquery.form.js') }}" type="text/javascript"></script>
-            <script src="{{ asset('bundles/sonataadmin/base.js') }}" type="text/javascript"></script>
+            {% for javascript in admin_pool.getOption('javascripts', []) %}
+            <script src="{{ asset(javascript) }}" type="text/javascript"></script>
+            {% endfor %}
 
             <script src="{{ asset('bundles/amladmin/javascripts/application.js') }}" type="text/javascript"></script>
+
         {% endblock %}
 
         <title>
@@ -143,6 +146,7 @@ file that was distributed with this source code.
                         <div class="breadcrumb-button">
                                 <span class="breadcrumb-label">{{ menu.label }}
                                     <span class="breadcrumb-arrow"><span></span></span>
+                                </span>
                         </div>
                     </div>
                     {% endif %}
@@ -222,7 +226,7 @@ file that was distributed with this source code.
         </div>
 
 
-        <script src="{{ asset('bundles/amlweb/js/bootstrap/bootstrap-datepicker.js') }}"></script>
-        <script src="{{ asset('bundles/amlweb/js/bootstrap/bootstrap-timepicker.js') }}"></script>
+       <!-- <script src="{{ asset('bundles/amlweb/js/bootstrap/bootstrap-datepicker.js') }}"></script>
+        <script src="{{ asset('bundles/amlweb/js/bootstrap/bootstrap-timepicker.js') }}"></script>-->
     </body>
 </html>
