N/A: [Discographie] fix wording

--- a/src/Aml/Bundle/DiscographyBundle/Resources/views/Default/index.html.twig
+++ b/src/Aml/Bundle/DiscographyBundle/Resources/views/Default/index.html.twig
@@ -35,7 +35,7 @@
 		
 		{% else %}	
 			<h1>Discographie</h1>
-			<p>Aucun article de blog publié.</p>
+			<p>Aucun album n'a été publié.</p>
 		{% endif %}
 	</div>
 </div>
