N/A: [Images] add vidéos images and add profile image "visuel_blog_list"

--- a/src/Aml/Bundle/AdminBundle/Resources/views/Navigation/primary_sidebar.html.twig
+++ b/src/Aml/Bundle/AdminBundle/Resources/views/Navigation/primary_sidebar.html.twig
@@ -81,6 +81,9 @@
                 <li class="">
                     <a href="{{ path('admin_aml_medias_file_list') }}"><i class="icon-hand-up"></i> Documents</a>
                 </li>
+                <li class="">
+                    <a href="{{ path('admin_aml_medias_video_youtube_list') }}"><i class="icon-hand-up"></i> Vidéos</a>
+                </li>
 
             </ul>
         </li>
