--- a/src/Aml/Bundle/AdminBundle/Resources/views/Navigation/primary_sidebar.html.twig
+++ b/src/Aml/Bundle/AdminBundle/Resources/views/Navigation/primary_sidebar.html.twig
@@ -49,7 +49,7 @@
                 </li>
 
                 <li class="">
-                    <a href="{{ path('content_link') }}"><i class="icon-th-large"></i> Liens</a>
+                    <a href="{{ path('admin_aml_web_link_list') }}"><i class="icon-th-large"></i> Liens</a>
                 </li>
             </ul>
 
