--- a/src/Aml/Bundle/AdminBundle/Resources/public/stylesheets/application.css
+++ b/src/Aml/Bundle/AdminBundle/Resources/public/stylesheets/application.css
@@ -9409,6 +9409,22 @@ hr.divider, li.divider {
     /* line 64, /home/andrei/core-admin-release/core-admin/source/stylesheets/buttons.scss */
     .btn.btn-default .caret {
       border-top: 4px solid black; }
+
+.btn-small {
+    padding: 2px 10px;
+    font-size: 11.9px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px
+}
+
+.btn-small [class^="icon-"], .btn-small [class*=" icon-"] {
+    margin-top: 0
+}
+
+.btn-mini [class^="icon-"], .btn-mini [class*=" icon-"] {
+    margin-top: -1px
+}
   /* line 69, /home/andrei/core-admin-release/core-admin/source/stylesheets/buttons.scss */
   .btn .caret {
     border-top: 4px solid white; }
